# HyperApp

./: .gitignore  CHANGELOG.md  app.py  init_db.py  pyproject.toml  schema.sql
.github/workflows/: ci.yml
static/css/: style.css
templates/: base.html  create.html  edit.html  post.html
tests/: test_app.py
